--- a/src/GazeTrackerUI/App.xaml
+++ b/src/GazeTrackerUI/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="GazeTrackerUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="GazeTrackerUIMainWindow.xaml">
+    StartupUri="GazeTrackerUIMainWindow.xaml"
+    Startup="App_Startup">
   <Application.Resources>
 
     <ResourceDictionary>
